# sweepstake-program

./: Anchor.toml  README.md  package-lock.json  package.json
assets/: create_sweepstake.drawio  create_user.drawio
programs/sweepstake-program/: Cargo.toml
programs/sweepstake-program/src/: common.rs  config.rs  error.rs  lib.rs  state.rs  validator.rs
tests/: dagoats-sweepstake.ts
