[package]
name = "dagoats-sweepstake"
version = "0.1.0"
description = "DaGOATs Sweepstake program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dagoats_sweepstake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
